--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-      <h1>Let's determine the type of triangle</h1>
+      <h1>Findout all kinds of Triangles!</h1>
       <!-- link index.html to scripts.js-->
       <script src="js/scripts.js"></script>
       <!--Add input types which collect users data and pushes to scripts.js-->
