--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <div>
       <h1>Findout all kinds of Triangles!</h1>
-      <!-- link index.html to scripts.js-->
+
       <script src="js/scripts.js"></script>
       <!--Add input types which collect users data and pushes to scripts.js-->
-      <p>Enter the first dimension of the triangle</p>
+      <p>Input the first measurements</p>
       <input type="number" id="sideOne" placeholder="Enter value" onfocus="placeholder=''" onblur="placeholder='Enter value'">
-      <p>Enter the second dimension of the triangle</p>
+      <p>Input the second measurements</p>
       <input type="number" id="sideTwo" placeholder="Enter value" onfocus="placeholder=''" onblur="placeholder='Enter value'">
-      <p>Enter the third dimension of the triangle</p>
+      <p>Input the third measurements</p>
       <input type="number" id="sideThree" placeholder="Enter value" onfocus="placeholder=''" onblur="placeholder='Enter value'">
       <br>
       <br>
