--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Triangle Tracker1</title>
   </head>
-  <body>
+  <body class="container">
     <div >
       <h1>Findout all kinds of Triangles!</h1>
 
